--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Tablet First Boilerplate</title>
+	<title>Mobile-first Sass Tool</title>
 
 	<!--[if (gte IE 9) | !(IE)]><!-->
 		<link rel="stylesheet" href="css/app.css">
